# banshee

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  scan_report.json
banshee/: __init__.py  cli.py  engine.py  models.py
banshee/core/: __init__.py  audit.py  bus.py  events.py  policy.py  types.py
banshee/forensics/: __init__.py  analyzer.py  recovery.py  timeline.py
banshee/integrity/: __init__.py  checksums.py  verifier.py
banshee/intelligence/: __init__.py  llm.py
banshee/plugins/: __init__.py  base.py  behavioral.py  context.py  dlp.py  execution.py  intelligence.py  knowledge.py  memory.py  network.py  patch.py
banshee/provenance/: __init__.py  tracker.py
banshee/reliability/: __init__.py  evaluator.py
banshee/security/: __init__.py  detector.py  scanner.py
benchmarks/: README.md  __init__.py  base.py  integrity_basic.py  poisoning_detection.py  retrieval_consistency.py  run.py
datasets/: README.md
datasets/poisoning/: injection_examples.json
datasets/synthetic/: clean_entries.json
docs/: architecture.md  research-roadmap.md  usage-guide.md
examples/: basic_scan.py  provenance_tracking.py  usage_guide.py
tests/: __init__.py  test_forensics.py  test_integrity.py  test_provenance.py  test_reliability.py  test_security.py
